# yaai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.test  LICENSE  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  docs.yml  lint.yml  release.yml  test.yml
docs/: README.md  architecture.md  concepts.md  configuration.md  deployment.md  drift-guide.md  getting-started.md  index.md  server-setup.md
docs/reference/: api.md  sdk.md
docs/stylesheets/: extra.css
frontend/: README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.e2e.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: auth-separation.spec.ts  auth.spec.ts  global-setup.ts  global-teardown.ts  jobs.spec.ts  model-lifecycle.spec.ts  notifications.spec.ts  settings.spec.ts
frontend/e2e/helpers/: auth.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  client.ts  dashboard.ts  inferences.ts  jobs.ts  models.ts  notifications.ts
frontend/src/assets/: main.css
frontend/src/components/: BarChart.vue  CopyableId.vue  DashboardPanel.vue  DriftTimelineChart.vue  GroupedBarChart.vue  HistogramChart.vue  InferenceVolumeChart.vue  OverlaidHistogram.vue  StatsSummary.vue  VersionNavTabs.vue
frontend/src/composables/: useECharts.ts
frontend/src/layouts/: DefaultLayout.vue
frontend/src/pages/: ComparisonPage.test.ts  ComparisonPage.vue  DashboardPage.vue  DriftResultsPage.test.ts  DriftResultsPage.vue  JobsPage.test.ts  JobsPage.vue  LoginPage.vue  ModelDetailPage.vue  ModelsPage.test.ts  ModelsPage.vue  NotificationsPage.vue  SchemaPage.vue  SettingsPage.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
scripts/: README.md  generate_demo_data.py  generate_demo_data_sdk.py  generate_openapi.py  seed_e2e_auth.py
tests/: conftest.py
tests/integration/: auth_separation_test.py  auth_test.py  comparison_test.py  conftest.py  dashboard_test.py  drift_overview_test.py  drift_service_test.py  drift_test.py  inferences_test.py  jobs_test.py  models_test.py  notifications_test.py  schema_test.py
tests/unit/: client_test.py  cloud_sql_test.py  conftest.py  scheduler_test.py
tests/unit/auth/: config_test.py  conftest.py  dependencies_test.py  jwt_test.py  passwords_test.py  service_auth_test.py
tests/unit/drift/: chi_squared_test.py  js_divergence_test.py  ks_test_test.py  psi_test.py  registry_test.py  window_size_test.py
yaai/: __init__.py  client.py
yaai/schemas/: __init__.py  common.py  inference.py  model.py
yaai/server/: __init__.py  alembic.ini  cloud_sql.py  config.py  database.py  main.py  migrate.py  rate_limit.py  scheduler.py
yaai/server/alembic/: env.py
yaai/server/alembic/versions/: 7f3c318ce50f_initial_schema.py  b4d9e2f1a8c3_add_reference_data_index.py
yaai/server/auth/: __init__.py  config.py  dependencies.py  jwt.py  oauth.py  passwords.py  service_auth.py
yaai/server/drift/: __init__.py  base.py  chi_squared.py  js_divergence.py  ks_test.py  psi.py  registry.py
yaai/server/models/: auth.py  inference.py  job.py  model.py
yaai/server/routers/: auth.py  dashboard.py  inferences.py  jobs.py  models.py  schema.py
yaai/server/schemas/: __init__.py  auth.py  dashboard.py  job.py
yaai/server/services/: auth_service.py  base.py  comparison_service.py  dashboard_service.py  drift_service.py  inference_service.py  job_service.py  model_service.py  schema_helpers.py
yaai/server/services/utils/: __init__.py  pagination.py
